<resources>
    <string name="app_name" translatable="false">CityAlert</string>
    <string name="add_note">Add Note</string>
    <string name="save">Save</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="note_sucess">Note added!</string>
    <string name="empty_not_saved">Empty input: Note not added</string>
    <string name="note_delete">Note deleted!</string>
    <string name="dialogtitle">Alert</string>
    <string name="dialogconfirm">Are you sure you want to delete all notes?</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="conf">Yes</string>
    <string name="mynotes">Notes</string>
    <string name="createnote">New note</string>
    <string name="empty">Empty</string>
    <string name="editsucess">Note edited successfully!</string>
    <string name="loginB">Login</string>
    <string name="notes">Notes</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="loginfail">Username or password wrong. Try again!</string>
    <string name="logout">Logout successful!</string>
    <string name="title_activity_perfil_utilizador">Map</string>
    <string name="nomeIr">Name:</string>
    <string name="type">Type:</string>
    <string name="create">Add</string>
    <string name="upload">Upload Image</string>
    <string name="cords">Coordinates:</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="obras">Constructions</string>
    <string name="acidentes">Accidents</string>
    <string name="defeitos">Defects</string>
    <string name="outros">Others</string>
    <string name="todos">All</string>
    <string name="logout2">You have to logout!</string>
</resources>