<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        android:text=""
        android:layout_toRightOf="@id/title"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:text=""
        android:textSize="14sp"
        android:layout_below="@id/description"/>




    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/save"
        android:textColorLink="#00FFFFFF"
        app:backgroundTint="#FCA656"
        app:iconTint="#FFFFFF" />



</RelativeLayout>