<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".PaginaInicial">




    <ImageView
        android:id="@+id/cityAlertImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/ic_cityalert_foreground" />



    <TextView
        android:id="@+id/usernametxview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cityAlertImage"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:text=""
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/usernametxview"
        android:layout_alignBaseline="@+id/usernametxview"
        />



    <TextView
        android:id="@+id/passwordxview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernametxview"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/passwordxview"
        android:layout_alignBaseline="@+id/passwordxview"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/loginB"
        android:backgroundTint="#FCA656"
        android:layout_below="@+id/passwordxview"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"

        />




</RelativeLayout>