<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditarIrregularidade"
    android:id="@+id/editarirregularidade">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/nometxview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/nomeIr"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nomeIr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/nometxview"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="textAutoComplete"
                android:text="" />

            <TextView
                android:id="@+id/descview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/description"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descricaoIr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/descview"
                android:layout_marginLeft="10dp"
                android:ems="10"
                />

            <TextView
                android:id="@+id/tipoview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/type"
                android:textSize="18dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Obras"

                    />

                <RadioButton
                    android:id="@+id/radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Acidente"

                    />

                <RadioButton
                    android:id="@+id/radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Defeitos"


                    />

                <RadioButton
                    android:id="@+id/radio_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Outros"

                    />


            </RadioGroup>





            <ImageView
                android:id="@+id/picture"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/radiogroup"
                android:layout_gravity="center"
                >
            </ImageView>

            <Button
                android:id="@+id/upload"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:backgroundTint="#FCA656"
                android:layout_below="@+id/picture"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:backgroundTint="#FCA656"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>

    </ScrollView>








</RelativeLayout>